--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h1{
   width: 35rem;
   height: 4.5rem;
   font-size: 1.7rem;
-  padding-left: .5rem;
+  padding-left: 1rem;
   }
   input:hover
   {
